editing file name

--- a/index.html
+++ b/index.html
@@ -1190,8 +1190,8 @@
             <div class="desc">Piódão</div>
         </div>
         <div class="photo">
-            <a target="_blank" href="img/Travel/Montemor-o-Velho.jpg">
-                <img src="img/Travel/Montemor-o-Velho.jpg" alt="Montemor-o-Velho">
+            <a target="_blank" href="img/Travel/Montemor-Velho.jpg">
+                <img src="img/Travel/Montemor-Velho.jpg" alt="Montemor-o-Velho">
             </a>
             <div class="desc">Montemor-o-Velho</div>
         </div>
@@ -1208,8 +1208,8 @@
             <div class="desc">Setúbal</div>
         </div>
         <div class="photo">
-            <a target="_blank" href="img/Travel/Sagres.jpg">
-                <img src="img/Travel/Sagres.jpg" alt="Sagres">
+            <a target="_blank" href="img/Travel/Sagre.jpg">
+                <img src="img/Travel/Sagre.jpg" alt="Sagres">
             </a>
             <div class="desc">Sagres</div>
         </div>
@@ -1238,7 +1238,7 @@
             <div class="desc">Figueira da Foz</div>
         </div>
         <div class="photo">
-            <a target="_blank" href="img/Travel/Batala.jpg">
+            <a target="_blank" href="img/Travel/Batalha.jpg">
                 <img src="img/Travel/BatalhaCropped.jpg" alt="Batalha">
             </a>
             <div class="desc">Batalha</div>
