editing file name

--- a/index.html
+++ b/index.html
@@ -1202,8 +1202,8 @@
             <div class="desc">Conímbriga</div>
         </div>
         <div class="photo">
-            <a target="_blank" href="img/Travel/Setúba.jpg">
-                <img src="img/Travel/Setúba.jpg" alt="Setúbal">
+            <a target="_blank" href="img/Travel/Setúbal.jpg">
+                <img src="img/Travel/Setúbal.jpg" alt="Setúbal">
             </a>
             <div class="desc">Setúbal</div>
         </div>
