adding google console stuff

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <script type="application/javascript" src="javascript.js"></script>
+    <meta name="google-site-verification" content="6pWuJfLh-Z5WFFDmn3Xc-n1rFic6jDFYRyjmMcg8d7A" />
 </head>
 <body>
 <div>
