adding new paper

--- a/index.html
+++ b/index.html
@@ -393,6 +393,21 @@
     </p>
 
     <h4>
+        Manhattan Transfer: Agglomeration and productivity in American literary production (with Lukas Kuld and
+        Christiane Hellmanzik) <em>In progress</em>
+    </h4>
+    <p>
+        New York City has dominated American literary production for almost 150 years. In this paper, we show strong
+        agglomeration effects for authors residing in New York City during the industry's infancy before World War II.
+        The effect declines with industry maturity and technological progress in communication and printing. We combine
+        novel yearly data on publications and residency of 471 eminent authors with US census data to provide a complete
+        picture of industry concentration and agglomeration effects since 1850. Taking relocation of working-age authors
+        to New York City as an event study, we see an immediate increase in publications after arriving. However, the
+        publication frequency of novels and nowadays successful works rises only gradually over the ten years following
+        arrival in NYC.
+    </p>
+
+    <h4>
         The origins of urban clusters in German literature (with Lukas Kuld) <em>In progress</em>
     </h4>
     <p>
@@ -1108,7 +1123,7 @@
       </ul>-->
 
 
-    <a class="anchor" id="Misc"><h1>Miscellaneous</h1></a>
+    <!--<a class="anchor" id="Misc"><h1>Miscellaneous</h1></a>
 
     <h2>More about me</h2>
 
@@ -1249,7 +1264,7 @@
             </a>
             <div class="desc">Porto</div>
         </div>
-    </div>
+    </div>-->
 </div>
 </body>
 </html>
