removing Miscellaneous menu

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <script type="application/javascript" src="javascript.js"></script>
-    <meta name="google-site-verification" content="6pWuJfLh-Z5WFFDmn3Xc-n1rFic6jDFYRyjmMcg8d7A" />
+    <meta name="google-site-verification" content="6pWuJfLh-Z5WFFDmn3Xc-n1rFic6jDFYRyjmMcg8d7A"/>
 </head>
 <body>
 <div>
@@ -76,9 +76,9 @@
                     <a href="#Teaching Interests">Teaching Interests</a>
                 </div>
             </div>
-            <div class="dropdown">
+<!--            <div class="dropdown">
                 <a href="#Misc">Miscellaneous</a>
-            </div>
+            </div>-->
         </div>
     </div>
 </div>
@@ -621,26 +621,18 @@
 
     Course descriptions for selected courses are available below. These include: Economics of
     Migration, Human Capital and the Knowledge Economy, Economics of Brexit, Academic Writing, and Mathematics and
-    Statistics. Additional course descriptions and teaching evaluations
-    are available upon request.
+    Statistics. Additional course descriptions and teaching evaluations are available upon request.
 
     <h3>Economics of Migration</h3>
     <p>I lectured the Economics of Migration seminar offered by the Chair of Urban, Regional, and International
-        Economics at
-        TU Dortmund in Autumn 2018 and Autumn 2019. This seminar was taught to 25-30 final year bachelor students
-        and masters
-        students
-        in
-        the
-        Department of Economics and the Department of Spatial Planning. The seminar was also open to students from
-        several
-        other faculties, such as industrial engineering and computer science. </p>
+        Economics at TU Dortmund in Autumn 2018 and Autumn 2019. This seminar was taught to 25-30 final year bachelor
+        students and masters students in the Department of Economics and the Department of Spatial Planning. The seminar
+        was also open to students from several other faculties, such as industrial engineering and computer
+        science. </p>
     <p>The aim of this seminar was to explore the causes and effects of migration from a microeconomic and
-        macroeconomic
-        perspective and evaluate current economic policy debates from a scientific perspective. The Economics of
-        Migration
-        seminar
-        lectures presented a series of economic research papers that broadly examine the following questions:</p>
+        macroeconomic perspective and evaluate current economic policy debates from a scientific perspective. The
+        Economics of Migration seminar lectures presented a series of economic research papers that broadly examine the
+        following questions:</p>
     <ul>
         <li>Who migrates?</li>
         <li>How do immigrants do in the labour market relative to natives?</li>
