removing teaching interests section

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <a href="#Teaching Overview">Teaching Overview</a>
                     <a href="#Courses">List of Courses Taught</a>
                     <a href="#Course Descriptions">Course Descriptions</a>
-                    <a href="#Teaching Interests">Teaching Interests</a>
+<!--                    <a href="#Teaching Interests">Teaching Interests</a>-->
                 </div>
             </div>
 <!--            <div class="dropdown">
@@ -970,6 +970,7 @@
         This textboox comes with a variety of online resources, including quizzes, that were used throughout the
         module.</p>
 
+<!--
     <hr>
 
     <a class="anchor" id="Teaching Interests"><h2>Teaching Interests</h2></a>
@@ -1098,7 +1099,7 @@
             Giorcelli, M., and Moser, P. (2019). Copyrights and creativity: Evidence from Italian operas. Available
             at SSRN 2505776.
         </li>
-    </ul>
+    </ul>-->
 
     <!--  <h3>Economics of European Integration</h3>
       <p>Course level: Bachelor or masters</p>
