fixing typo in intro

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <p>I am an empirical economist with research interests in urban economics, labour economics, economic history, and
         cultural economics.
-        My research has touched on several subfields of economics, including migration, agglomeration of economics
+        My research has touched on several subfields of economics, including migration, agglomeration of economic
         activity, and the economic history of the arts. I use novel, historical datasets to study the migration and
         geographic clustering of creative workers and to identify agglomeration effects associated with artistic
         clusters. My most recent research has also used these historical data to study gender and racial gaps in
