Updating research presentations

--- a/index.html
+++ b/index.html
@@ -452,6 +452,12 @@
   <table>
     <tbody>
     <tr>
+      <td>International Conference on Cultural Economics (ACEI 2020+1)
+      </td>
+      <td>July 2021</td>
+      <td>Online</td>
+    </tr>
+    <tr>
       <td>Annual Meeting of the Southern Economics Association/North American Cultural Economics
         Workshop
       </td>
