Updating research presentations

--- a/index.html
+++ b/index.html
@@ -475,6 +475,11 @@
       <td>Pisa, Italy</td>
     </tr>
     <tr>
+      <td>International Conference on Cultural Economics (ACEI 2016)</td>
+      <td>June 2016</td>
+      <td>Valladolid, Spain</td>
+    </tr>
+    <tr>
       <td>Irish Quantitative History Annual Meeting</td>
       <td>January 2016</td>
       <td>Dublin, Ireland</td>
