--- a/index.html
+++ b/index.html
@@ -411,16 +411,10 @@
     </p>
 
     <h4>
-        The origins of urban clusters in German literature (with Lukas Kuld) <em>In progress</em>
+        Market structure and creative cluster formation: The origins of urban clusters in German literature, 1700-1932 (with Lukas Kuld) <em>Submitted</em>
     </h4>
     <p>
-        Large cities and clusters of workers are widely understood to be key factors in creative production. In
-        this paper, we trace their empirical beginnings in the location choices made by German literary writers.
-        We study yearly data on all 149 writers listed in the Encyclopædia Britannica as German and born between
-        1700 and 1899. This time frame includes major economic and political changes, such as the introduction
-        of copyright. Writers mirror these changes in their mobility, location, and clustering choices. By the
-        end of the 19th Century writers show a strong convergence into few large cities during early adulthood,
-        which is not observed for earlier cohorts, and show typical modern life-cycle migration.
+        Using yearly data on 153 prominent German authors (1700-1932), we show how changes in the political and economic environment facilitated the formation of literary clusters. Early authors follow general population patterns, leading to geographic dispersion in a patronage system characterized by spatial competition. At the end of the 19th century, authors concentrate in large economic and political capitals. These changes in location patterns mirror trends in political and territorial consolidation and the professionalization of authorship. The last cohort shows large-scale migration into literary centers around the age of 20. Therefore, these literary clusters are not due to changing birth locations.
     </p>
 
     <h4>
