Linking to German cluster paper

--- a/index.html
+++ b/index.html
@@ -391,7 +391,10 @@
     </p>
 
     <h4>
-        Market structure and creative cluster formation: The origins of urban clusters in German literature, 1700-1932 (with Lukas Kuld) <em>Submitted</em>
+        Market structure and creative cluster formation: The origins of urban clusters in German literature, 1700-1932 (with Lukas Kuld)
+        <a href="img/KuldMitchell_April2022.pdf" download="KuldMitchell_April2022.pdf">                                                                                                                                             
+            <em>Submitted</em>
+        </a>
     </h4>
     <p>
         Using yearly data on 153 prominent German authors (1700-1932), we show how changes in the political and economic environment facilitated the formation of literary clusters. Early authors follow general population patterns, leading to geographic dispersion in a patronage system characterized by spatial competition. At the end of the 19th century, authors concentrate in large economic and political capitals. These changes in location patterns mirror trends in political and territorial consolidation and the professionalization of authorship. The last cohort shows large-scale migration into literary centers around the age of 20. Therefore, these literary clusters are not due to changing birth locations.
