--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
     </p>    
     
     <h4>
-        Women's property rights and creative productions: Evidence from American authorship 1800-1999 (with Christiane
+        Women's property rights and creative production: Evidence from American authorship 1800-1999 (with Christiane
         Hellmanzik and Lukas Kuld) <em>In progress</em>
     </h4>
     <p>
@@ -423,7 +423,7 @@
     </p>
     
     <h4>
-        The "Motherhood Penalty" in artistic productions: Historical evidence from American authors, 1800-1999 (with Christiane
+        The "Motherhood Penalty" in artistic production: Historical evidence from American authors, 1800-1999 (with Christiane
         Hellmanzik and Lukas Kuld) <em>In progress</em>
     </h4>
     <p>
