--- a/index.html
+++ b/index.html
@@ -408,11 +408,11 @@
     </p>
     
     <h4>
-        Tourism activity at cultural heritage sites during and after the COVID-19 pandemic: New real-time indicator obtained from a leading travel portal (with Karol Borowiecki) <em>In progress</em>
-    </h4>
-    <p>
-        This paper collects data on tourism activity at European cultural heritage sites using computer-based algorithms to scrape large data from a leading travel portal, TripAdvisor. The project covers the periods before, during, and after the pandemic (the “re-opening") for 10 EU countries. We provide a comprehensive and current overview of the patterns and changes in mobility as a result of the pandemic in selected European destinations. In particular, we examine the change in level of tourism activity, changes in distance of travel, and changes in share of domestic vs foreign tourists in response to the COVID-19 pandemic and “re-opening”. We also determine whether there was an increase in tourism flows from top destinations to less crowded, peripheral destinations and to nature and/or outdoor sites. A key novelty is the usage of unique data measuring tourist flows and tourist satisfaction at a large number of destinations. We validate our findings using aggregated tourism data from the last available years. Specific policy recommendations will be made to improve strategies, adapting measures and funding to a more sustainable and positive impact. The paper will inform policy makers on new ways of tourism that prevent overcrowding/overtourism and direct tourists to undiscovered areas that also show Europe’s nature and cultural heritage.
-    </p>    
+        Tourism activity at cultural heritage sites during and after the COVID-19 pandemic: New real-time indicator obtained from a leading travel portal (with Karol Borowiecki)
+        <a href="img/CulturalHeritageTourism_COVID19.pdf" download="CulturalHeritageTourism_COVID19.pdf">
+            <em>In progress</em>
+        </a>
+    </h4>   
     
     <h4>
         Women's property rights and creative production: Evidence from American authorship 1800-1999 (with Christiane
