Excluding sections of website

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         </tr>
         <tr>
             <td>Languages:</td>
-            <td>English (native), Portuguese (upper intermediate), Spanish (basic), German (basic)</td>
+            <td>English (native), Portuguese (upper intermediate), Spanish (basic), Danish (basic)</td>
         </tr>
         <tr>
             <td>Find Me:</td>
@@ -610,6 +610,7 @@
         </tbody>
     </table>
 
+<!--
     <hr>
 
     <a class="anchor" id="Course Descriptions"><h2>Selected Course Descriptions</h2></a>
@@ -965,7 +966,6 @@
         This textboox comes with a variety of online resources, including quizzes, that were used throughout the
         module.</p>
 
-    <!--
         <hr>
 
         <a class="anchor" id="Teaching Interests"><h2>Teaching Interests</h2></a>
