Excluding menu for course descriptions

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                 <div class="dropdown-container">
                     <a href="#Teaching Overview">Teaching Overview</a>
                     <a href="#Courses">List of Courses Taught</a>
-                    <a href="#Course Descriptions">Course Descriptions</a>
-                    <!--                    <a href="#Teaching Interests">Teaching Interests</a>-->
+                    <!-- <a href="#Course Descriptions">Course Descriptions</a> -->
+                    <!-- <a href="#Teaching Interests">Teaching Interests</a>-->
                 </div>
             </div>
             <!--            <div class="dropdown">
