--- a/index.html
+++ b/index.html
@@ -85,24 +85,16 @@
 <div class="main width-wrap">
 
     <p>I am an empirical economist with research interests in urban economics, economic history, and
-        cultural economics.
-        My research has touched on several subfields of economics, including migration, agglomeration of economic
+        cultural economics. </p>
+    <p>
+        My academic research has touched on several subfields of economics, including migration, agglomeration of economic
         activity, the economic history of the arts, and tourism. I often use novel, historical datasets to study the migration and
         geographic clustering of creative workers and to identify agglomeration effects associated with artistic
-        clusters. I have also contributed to several projects on tourism in European peripheries and provided research and data support to a number of other research projects and public policy reviews on a variety of topics.</p>
-    <p>I worked a postdoc at the Department of Business and Economics at the University of Southern Denmark, where
-        I contributed to the INCULTUM project (Horizon 2020 project). I also worked as a Postdoctoral Researcher at
-        the Chair of Urban, Regional, and International Economics (URI) at TU
-        Dortmund. I received a PhD in Economics from Trinity College Dublin (Ireland). I was one of the inaugural
-        Grattan Scholars at Trinity College Dublin, and I was selected as an Irish Research Council Fellow at the 5th
-        Lindau Nobel Laureate Meeting on Economic Sciences. I received my MSc in Economics and MPhil in International
-        Peace Studies from Trinity College Dublin (Ireland), and a BA in Economics from Hendrix College (USA).
-    <p>I worked as a Research Associate for the Institute of Public Administration (IPA), a recognised college of
-        University College Dublin (UCD). In this position, I provided research, analytical, and statistical assistance
-        as part of an Independent Secretariat for the Expert Commission on the Domestic Public Water Services. I also
-        worked as a Research Economist for Indecon Economic Consultants in Dublin, Ireland, where I contributed to a
+        clusters. I have also contributed to several academic research projects on tourism in European peripheries.</p>
+    <p>In addition to this academic work, I provided research, analytical, and statistical assistance
+        as part of an Independent Secretariat for the Expert Commission on the Domestic Public Water Services in Ireland. I have contributed to a
         number of economic impact assessments, policy reviews, and other assignments for various government departments
-        and agencies. In addition, I have used my experience with economics and panel data analysis to consult on several projects on veterinary epidemiology and the economics of animal health.</p>
+        and agencies. I have used my experience with economics and panel data analysis to consult on several projects on veterinary epidemiology and the economics of animal health.</p>
 
     <a href="img/SaraMitchellCV_Dec2020.pdf" download="SaraMitchellCV_Dec2020.pdf">
         <p>Download my CV here</p>
