--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="b">
                 <div>
                     <p style="font-size: 2.5em">Sara Mitchell</p>
-                    <p>Economist</p>
+                    <p>Research Economist</p>
                     <p>Urban Economics • Economic History • Cultural Economics</p>
                 </div>
             </div>
@@ -84,8 +84,8 @@
 
 <div class="main width-wrap">
 
-    <p>I am an empirical economist with research interests in urban economics, economic history, and
-        cultural economics. </p>
+    <p>I am research economist with experience in both academia and the private sector.  My primary research interests in urban economics, economic history, and
+        cultural economics; although, I have contributed to research projects and policy reviews on a variety of topics.</p>
     <p>
         My academic research has touched on several subfields of economics, including migration, agglomeration of economic
         activity, the economic history of the arts, and tourism. I often use novel, historical datasets to study the migration and
@@ -174,6 +174,11 @@
         </tbody>
     </table>
 
+    <p>Absence for health reasons: July 2022, Sep-Dec 2023</p>
+    <p>Maternity leave: November 2022 to September 2023</p>
+    <p>Career break for health reasons: Dec 2023-present</p> 
+    <p><em>Please note that no research, teaching or other research activity was expected during these periods.</em>s</p>
+   
     <hr>
 
     <a class="anchor" id="Education"><h2>Education</h2></a>
