--- a/index.html
+++ b/index.html
@@ -171,13 +171,22 @@
             <td></td>
             <td>Masters in Development Practice, Trinity College Dublin</td>
         </tr>
+        <tr></tr>
+        <tr>
+            <td>July 2022, Sep-Dec 2023</td>
+            <td>Absence for health reasons</td>
+        </tr> 
+        <tr>
+            <td>Nov 2022 to Sep 2023</td>
+            <td>Maternity leave</td>
+        </tr>
+        <tr>
+            <td>Dec 2023-present</td>
+            <td>Career break for health reasons</td>
+        </tr>
         </tbody>
     </table>
-
-    <p>Absence for health reasons: July 2022, Sep-Dec 2023</p>
-    <p>Maternity leave: November 2022 to September 2023</p>
-    <p>Career break for health reasons: Dec 2023-present</p> 
-    <p><em>Please note that no research, teaching or other research activity was expected during these periods.</em>s</p>
+    <p><em>Please note that no research, teaching or other research activity was expected during these periods.</em></p>
    
     <hr>
 
