--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <td></td>
             <td>Masters in Development Practice, Trinity College Dublin</td>
         </tr>
-        <tr></tr>
+        <tr><em>Please note that no research, teaching or other activity was expected during the periods listed below.</em></tr>
         <tr>
             <td>July 2022, Sep-Dec 2023</td>
             <td>Absence for health reasons</td>
@@ -186,7 +186,6 @@
         </tr>
         </tbody>
     </table>
-    <p><em>Please note that no research, teaching or other research activity was expected during these periods.</em></p>
    
     <hr>
 
