--- a/index.html
+++ b/index.html
@@ -358,15 +358,17 @@
         Journal of Urban Economics, 2019
     </h4>    
     <h4>
-        <a href="https://doi.org/10.1093/ereh/head003"> Market structure and creative cluster formation: the origins of urban clusters in German literature, 1700–1932 (with Lukas Kuld)</a>
+        <a href="https://doi.org/10.1093/ereh/head003"> Market structure and creative cluster formation: the origins of urban clusters in German literature, 1700–1932 </a>
+        (with Lukas Kuld)
         European Review of Economic History, 2023
     
     </h4>
     
     <h4>
         <a href="img/ArcticAirbnbHosts.pdf" download="ArcticAirbnbHosts.pdf">
-            Professionalisation and performance of Airbnb hosts in rural regions (with Karol Borowiecki, Birgit Leick, Evgueni Vinogradov, Guðrún Þóra Gunnarsdóttir, Jie Zhang, Susanne Gretzinger, Vera Vilhjálmsdóttir)
+            Professionalisation and performance of Airbnb hosts in rural regions
         </a>
+        (with Karol Borowiecki, Birgit Leick, Evgueni Vinogradov, Guðrún Þóra Gunnarsdóttir, Jie Zhang, Susanne Gretzinger, Vera Vilhjálmsdóttir)
         International Journal of Hospitality Management, 2024
     </h4>
 
