--- a/index.html
+++ b/index.html
@@ -171,7 +171,12 @@
             <td></td>
             <td>Masters in Development Practice, Trinity College Dublin</td>
         </tr>
-        <tr><em>Please note that no research, teaching or other activity was expected during the periods listed below.</em></tr>
+        </tbody>
+    </table>
+    
+    <p><em>Please note that no research, teaching or other activity was expected during the periods listed below.</em></p>
+    <table>
+        <tbody>
         <tr>
             <td>July 2022, Sep-Dec 2023</td>
             <td>Absence for health reasons</td>
