--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <td>Department of Economics, Trinity College Dublin</td>
         </tr>
         <tr>
-            <td>Jan. 2015 - Aug 2015</td>
+            <td>Jan 2015 - Aug 2015</td>
             <td><em>Lecturer</em></td>
         </tr>
         <tr>
@@ -178,15 +178,15 @@
     <table>
         <tbody>
         <tr>
-            <td>July 2022, Sep-Dec 2023</td>
+            <td>July 2022 &#38; Sep - Dec 2023</td>
             <td>Absence for health reasons</td>
         </tr> 
         <tr>
-            <td>Nov 2022 to Sep 2023</td>
+            <td>Nov 2022 - Sep 2023</td>
             <td>Maternity leave</td>
         </tr>
         <tr>
-            <td>Dec 2023-present</td>
+            <td>Dec 2023 - present</td>
             <td>Career break for health reasons</td>
         </tr>
         </tbody>
@@ -395,7 +395,8 @@
             <em>Submitted</em>
         </a>
     </p>   
-    
+
+    <!--
     <p>
         Women's property rights and creative production: Evidence from American authorship 1800-1999 (with Christiane
         Hellmanzik and Lukas Kuld)
@@ -418,7 +419,7 @@
             <em>Working Paper</em>
         </a>
     </p>
-
+    -->
     <p>
         The Economic Geography of American Artists, Postbellum to World War II (with Lukas Kuld and Amir B. Ferreira Neto)
         <a href="img/EconGeography_AmericanArtists.pdf" download="EconGeography_AmericanArtists.pdf">
