--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <td>Department of Economics, Technical University Dortmund</td>
         </tr>
         <tr>
-            <td>Jan. 2017 - June 2018</td>
+            <td>Jan 2017 - June 2018</td>
             <td><em>Research Economist</em></td>
         </tr>
         <tr>
@@ -136,7 +136,7 @@
             <td>Indecon Economic Consultants, Dublin</td>
         </tr>
         <tr>
-            <td>Aug. 2016 - June 2018</td>
+            <td>Aug 2016 - June 2018</td>
             <td><em>Research Associate</em></td>
         </tr>
         <tr>
@@ -148,7 +148,7 @@
             <td>UCD Institute of Public Administration</td>
         </tr>
         <tr>
-            <td>Sep. 2013 - Aug 2016</td>
+            <td>Sep 2013 - Aug 2016</td>
             <td><em>Lecturer</em></td>
         </tr>
         <tr>
@@ -420,11 +420,12 @@
         </a>
     </p>
     -->
+    
     <p>
         The Economic Geography of American Artists, Postbellum to World War II (with Lukas Kuld and Amir B. Ferreira Neto)
         <a href="img/EconGeography_AmericanArtists.pdf" download="EconGeography_AmericanArtists.pdf">
             <em>In progress</em>
-        <\a>
+        </a>
     </p>
 
     <hr>
