--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
         cultural economics; although, I have contributed to research projects and policy reviews on a variety of topics.</p>
     <p>
         My academic research has touched on several subfields of economics, including migration, agglomeration of economic
-        activity, the economic history of the arts, and tourism. I often use novel, historical datasets to study the migration and
+        activity, the economic history of the arts, and tourism. I have also contributed to several academic research projects on tourism in European peripheries. I often use novel, historical datasets to study the migration and
         geographic clustering of creative workers and to identify agglomeration effects associated with artistic
-        clusters. I have also contributed to several academic research projects on tourism in European peripheries.</p>
+        clusters. </p>
     <p>In addition to this academic work, I provided research, analytical, and statistical assistance
-        as part of an Independent Secretariat for the Expert Commission on the Domestic Public Water Services in Ireland. I have contributed to a
+        as part of an Independent Secretariat for the Expert Commission on the Domestic Public Water Services in Ireland. While working for an economic consulting firm, I contributed to a
         number of economic impact assessments, policy reviews, and other assignments for various government departments
-        and agencies. I have used my experience with economics and panel data analysis to consult on several projects on veterinary epidemiology and the economics of animal health.</p>
+        and agencies. I have also used my experience with economics and panel data analysis to consult on several projects on veterinary epidemiology and the economics of animal health.</p>
 
     <a href="img/SaraMitchellCV_Dec2020.pdf" download="SaraMitchellCV_Dec2020.pdf">
         <p>Download my CV here</p>
